# flappy

./: Cargo.toml
src/: collision.rs  constants.rs  main.rs  parallax.rs  player.rs  score.rs  tower.rs  ui.rs
src/player/: animation.rs  player.rs
