[package]
name = "flappy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking", "mp3"] }
bevy-inspector-egui = "0.21.0"
bevy-parallax = "0.7.0"
rand = "0.8.5"
